--- a/src/main/resources/conversionFactors.yml
+++ b/src/main/resources/conversionFactors.yml
@@ -1,31 +1,123 @@
 DistanceLengthUnits:
-  meter_to_centimeter: 100
-  meter_to_kilometer: 0.001
-  meter_to_feet: 3.28084
-  # Add more conversions as needed
+  m_to_cm: 100
+  m_to_km: 0.001
+  m_to_ft: 3.28084
+  m_to_mm: 1000
+  m_to_in: 39.3701
+  m_to_mi: 0.000621371
+
+  cm_to_m: 0.01
+  cm_to_km: 0.00001
+  cm_to_ft: 0.0328084
+  cm_to_mm: 10
+  cm_to_in: 0.393701
+  cm_to_mi: 0.00000621371
+
+  km_to_m: 1000
+  km_to_cm: 100000
+  km_to_ft: 3280.84
+  km_to_mm: 1000000
+  km_to_in: 39370.1
+  km_to_mi: 0.621371
+
+  ft_to_m: 0.3048
+  ft_to_cm: 30.48
+  ft_to_km: 0.0003048
+  ft_to_mm: 304.8
+  ft_to_in: 12
+  ft_to_mi: 0.000189394
+
+  in_to_m: 0.0254
+  in_to_cm: 2.54
+  in_to_km: 0.0000254
+  in_to_ft: 0.0833333
+  in_to_mm: 25.4
+  in_to_mi: 0.0000157828
+
+  mi_to_m: 1609.34
+  mi_to_cm: 160934
+  mi_to_km: 1.60934
+  mi_to_ft: 5280
+  mi_to_in: 63360
+  mi_to_mm: 1609340
+
+  mm_to_m: 0.001
+  mm_to_cm: 0.1
+  mm_to_km: 0.000001
+  mm_to_ft: 0.00328084
+  mm_to_in: 0.0393701
+  mm_to_mi: 0.000000621371
 
 EnergyUnits:
-  joule_to_kilowatt_hour: 0.00000027778
-  joule_to_calorie: 0.239006
-  # Add more conversions as needed
+  J_to_kWh: 2.77778e-7
+  J_to_cal: 0.239006
+  J_to_kcal: 0.000239006
+  J_to_BTU: 0.000947817
+
+  kWh_to_J: 3600000
+  kWh_to_cal: 860420.65
+  kWh_to_kcal: 860.42065
+  kWh_to_BTU: 3412.14163
+
+  cal_to_J: 4.184
+  cal_to_kWh: 1.16222e-6
+  cal_to_kcal: 0.001
+  cal_to_BTU: 0.00396567
+
+  kcal_to_J: 4184
+  kcal_to_kWh: 0.00116222
+  kcal_to_cal: 1000
+  kcal_to_BTU: 3.96567
+
+  BTU_to_J: 1055.06
+  BTU_to_kWh: 0.000293071
+  BTU_to_cal: 251.99576
+  BTU_to_kcal: 0.251996
 
 ForceUnits:
-  newton_to_pound_force: 0.224809
-  # Add more conversions as needed
+  N_to_lbf: 0.224809
+  lbf_to_N: 4.44822
 
 MassUnits:
-  kilogram_to_gram: 1000
-  kilogram_to_pound: 2.20462
-  gram_to_ounce: 0.035274
-  # Add more conversions as needed
+  kg_to_g: 1000
+  kg_to_lb: 2.20462
+  kg_to_oz: 35.274
+
+  g_to_kg: 0.001
+  g_to_lb: 0.00220462
+  g_to_oz: 0.035274
+
+  lb_to_kg: 0.453592
+  lb_to_g: 453.592
+  lb_to_oz: 16
+
+  oz_to_kg: 0.0283495
+  oz_to_g: 28.3495
+  oz_to_lb: 0.0625
 
 PressureUnits:
-  pascal_to_atmosphere: 0.00000986923
-  pascal_to_bar: 0.00001
-  atmosphere_to_psi: 14.6959
-  # Add more conversions as needed
+  Pa_to_atm: 9.86923e-6
+  Pa_to_bar: 1e-5
+  Pa_to_psi: 0.000145038
+
+  atm_to_Pa: 101325
+  atm_to_bar: 1.01325
+  atm_to_psi: 14.6959
+
+  bar_to_Pa: 100000
+  bar_to_atm: 0.986923
+  bar_to_psi: 14.5038
+
+  psi_to_Pa: 6894.76
+  psi_to_atm: 0.068046
+  psi_to_bar: 0.0689476
 
 TimeUnits:
-  second_to_minute: 0.0166667
-  minute_to_hour: 0.0166667
-  # Add more conversions as needed
+  s_to_min: 0.0166667
+  s_to_hr: 0.000277778
+
+  min_to_s: 60
+  min_to_hr: 0.0166667
+
+  hr_to_s: 3600
+  hr_to_min: 60
