added calculation logic for force that allows user to provide mass and acceleration in vector form and then additional forces if they choose and then retrieve a resultant force in newtons and the result vector

--- a/src/main/resources/conversionFactors.yml
+++ b/src/main/resources/conversionFactors.yml
@@ -1,123 +1,123 @@
 DistanceLengthUnits:
-  m_to_cm: 100
-  m_to_km: 0.001
-  m_to_ft: 3.28084
-  m_to_mm: 1000
-  m_to_in: 39.3701
-  m_to_mi: 0.000621371
+  METER_to_CENTIMETER: 100
+  METER_to_KILOMETER: 0.001
+  METER_to_FEET: 3.28084
+  METER_to_MILLIMETER: 1000
+  METER_to_INCHES: 39.3701
+  METER_to_MILE: 0.000621371
 
-  cm_to_m: 0.01
-  cm_to_km: 0.00001
-  cm_to_ft: 0.0328084
-  cm_to_mm: 10
-  cm_to_in: 0.393701
-  cm_to_mi: 0.00000621371
+  CENTIMETER_to_METER: 0.01
+  CENTIMETER_to_KILOMETER: 0.00001
+  CENTIMETER_to_FEET: 0.0328084
+  CENTIMETER_to_MILLIMETER: 10
+  CENTIMETER_to_INCHES: 0.393701
+  CENTIMETER_to_MILE: 0.00000621371
 
-  km_to_m: 1000
-  km_to_cm: 100000
-  km_to_ft: 3280.84
-  km_to_mm: 1000000
-  km_to_in: 39370.1
-  km_to_mi: 0.621371
+  KILOMETER_to_METER: 1000
+  KILOMETER_to_CENTIMETER: 100000
+  KILOMETER_to_FEET: 3280.84
+  KILOMETER_to_MILLIMETER: 1000000
+  KILOMETER_to_INCHES: 39370.1
+  KILOMETER_to_MILE: 0.621371
 
-  ft_to_m: 0.3048
-  ft_to_cm: 30.48
-  ft_to_km: 0.0003048
-  ft_to_mm: 304.8
-  ft_to_in: 12
-  ft_to_mi: 0.000189394
+  FEET_to_METER: 0.3048
+  FEET_to_CENTIMETER: 30.48
+  FEET_to_KILOMETER: 0.0003048
+  FEET_to_MILLIMETER: 304.8
+  FEET_to_INCHES: 12
+  FEET_to_MILE: 0.000189394
 
-  in_to_m: 0.0254
-  in_to_cm: 2.54
-  in_to_km: 0.0000254
-  in_to_ft: 0.0833333
-  in_to_mm: 25.4
-  in_to_mi: 0.0000157828
+  INCHES_to_METER: 0.0254
+  INCHES_to_CENTIMETER: 2.54
+  INCHES_to_KILOMETER: 0.0000254
+  INCHES_to_FEET: 0.0833333
+  INCHES_to_MILLIMETER: 25.4
+  INCHES_to_MILE: 0.0000157828
 
-  mi_to_m: 1609.34
-  mi_to_cm: 160934
-  mi_to_km: 1.60934
-  mi_to_ft: 5280
-  mi_to_in: 63360
-  mi_to_mm: 1609340
+  MILE_to_METER: 1609.34
+  MILE_to_CENTIMETER: 160934
+  MILE_to_KILOMETER: 1.60934
+  MILE_to_FEET: 5280
+  MILE_to_INCHES: 63360
+  MILE_to_MILLIMETER: 1609340
 
-  mm_to_m: 0.001
-  mm_to_cm: 0.1
-  mm_to_km: 0.000001
-  mm_to_ft: 0.00328084
-  mm_to_in: 0.0393701
-  mm_to_mi: 0.000000621371
+  MILLIMETER_to_METER: 0.001
+  MILLIMETER_to_CENTIMETER: 0.1
+  MILLIMETER_to_KILOMETER: 0.000001
+  MILLIMETER_to_FEET: 0.00328084
+  MILLIMETER_to_INCHES: 0.0393701
+  MILLIMETER_to_MILE: 0.000000621371
 
 EnergyUnits:
-  J_to_kWh: 2.77778e-7
-  J_to_cal: 0.239006
-  J_to_kcal: 0.000239006
-  J_to_BTU: 0.000947817
+  JOULE_to_KILOWATT_HOUR: 2.77778e-7
+  JOULE_to_CALORIE: 0.239006
+  JOULE_to_KILOCALORIE: 0.000239006
+  JOULE_to_BTU: 0.000947817
 
-  kWh_to_J: 3600000
-  kWh_to_cal: 860420.65
-  kWh_to_kcal: 860.42065
-  kWh_to_BTU: 3412.14163
+  KILOWATT_HOUR_to_JOULE: 3600000
+  KILOWATT_HOUR_to_CALORIE: 860420.65
+  KILOWATT_HOUR_to_KILOCALORIE: 860.42065
+  KILOWATT_HOUR_to_BTU: 3412.14163
 
-  cal_to_J: 4.184
-  cal_to_kWh: 1.16222e-6
-  cal_to_kcal: 0.001
-  cal_to_BTU: 0.00396567
+  CALORIE_to_JOULE: 4.184
+  CALORIE_to_KILOWATT_HOUR: 1.16222e-6
+  CALORIE_to_KILOCALORIE: 0.001
+  CALORIE_to_BTU: 0.00396567
 
-  kcal_to_J: 4184
-  kcal_to_kWh: 0.00116222
-  kcal_to_cal: 1000
-  kcal_to_BTU: 3.96567
+  KILOCALORIE_to_JOULE: 4184
+  KILOCALORIE_to_KILOWATT_HOUR: 0.00116222
+  KILOCALORIE_to_CALORIE: 1000
+  KILOCALORIE_to_BTU: 3.96567
 
-  BTU_to_J: 1055.06
-  BTU_to_kWh: 0.000293071
-  BTU_to_cal: 251.99576
-  BTU_to_kcal: 0.251996
+  BTU_to_JOULE: 1055.06
+  BTU_to_KILOWATT_HOUR: 0.000293071
+  BTU_to_CALORIE: 251.99576
+  BTU_to_KILOCALORIE: 0.251996
 
 ForceUnits:
-  N_to_lbf: 0.224809
-  lbf_to_N: 4.44822
+  NEWTONS_to_POUND_FORCE: 0.224809
+  POUND_FORCE_to_NEWTONS: 4.44822
 
 MassUnits:
-  kg_to_g: 1000
-  kg_to_lb: 2.20462
-  kg_to_oz: 35.274
+  KILOGRAM_to_GRAMS: 1000
+  KILOGRAM_to_POUNDS: 2.20462
+  KILOGRAM_to_OUNCES: 35.274
 
-  g_to_kg: 0.001
-  g_to_lb: 0.00220462
-  g_to_oz: 0.035274
+  GRAMS_to_KILOGRAM: 0.001
+  GRAMS_to_POUNDS: 0.00220462
+  GRAMS_to_OUNCES: 0.035274
 
-  lb_to_kg: 0.453592
-  lb_to_g: 453.592
-  lb_to_oz: 16
+  POUNDS_to_KILOGRAM: 0.453592
+  POUNDS_to_GRAMS: 453.592
+  POUNDS_to_OUNCES: 16
 
-  oz_to_kg: 0.0283495
-  oz_to_g: 28.3495
-  oz_to_lb: 0.0625
+  OUNCES_to_KILOGRAM: 0.0283495
+  OUNCES_to_GRAMS: 28.3495
+  OUNCES_to_POUNDS: 0.0625
 
 PressureUnits:
-  Pa_to_atm: 9.86923e-6
-  Pa_to_bar: 1e-5
-  Pa_to_psi: 0.000145038
+  PASCAL_to_ATMOSPHERE: 9.86923e-6
+  PASCAL_to_BAR: 1e-5
+  PASCAL_to_POUNDS_PER_SQUARE_INCH: 0.000145038
 
-  atm_to_Pa: 101325
-  atm_to_bar: 1.01325
-  atm_to_psi: 14.6959
+  ATMOSPHERE_to_PASCAL: 101325
+  ATMOSPHERE_to_BAR: 1.01325
+  ATMOSPHERE_to_POUNDS_PER_SQUARE_INCH: 14.6959
 
-  bar_to_Pa: 100000
-  bar_to_atm: 0.986923
-  bar_to_psi: 14.5038
+  BAR_to_PASCAL: 100000
+  BAR_to_ATMOSPHERE: 0.986923
+  BAR_to_POUNDS_PER_SQUARE_INCH: 14.5038
 
-  psi_to_Pa: 6894.76
-  psi_to_atm: 0.068046
-  psi_to_bar: 0.0689476
+  POUNDS_PER_SQUARE_INCH_to_PASCAL: 6894.76
+  POUNDS_PER_SQUARE_INCH_to_ATMOSPHERE: 0.068046
+  POUNDS_PER_SQUARE_INCH_to_BAR: 0.0689476
 
 TimeUnits:
-  s_to_min: 0.0166667
-  s_to_hr: 0.000277778
+  SECOND_to_MINUTE: 0.0166667
+  SECOND_to_HOUR: 0.000277778
 
-  min_to_s: 60
-  min_to_hr: 0.0166667
+  MINUTE_to_SECOND: 60
+  MINUTE_to_HOUR: 0.0166667
 
-  hr_to_s: 3600
-  hr_to_min: 60
+  HOUR_to_SECOND: 3600
+  HOUR_to_MINUTE: 60
